Joomla! 1.6 and 1.7, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

* -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

03-Aug-2011 Jean-Marie Simonet
 $ Updating installation language files: hr-HR, pt-PT

01-Aug-2011 Mark Dexter
 # [#26459] Alternative Menu Items / JCategoryNode Showing Errors

28-Jul-2011 Jean-Marie Simonet
#  [#26510] wrong file name. Thanks Bill
$ [#26499] Incorrect English not en-GB. Thanks Jacob 
$ [#26497] Incorrect English in template. Thanks Bill
$ [#26500] Improve English grammar. Thanks Bill.
$ [#26416] Incorrect terminology in Language Switcher module. Thanks Jacob.
 
25-Jul-2011 Jean-Marie Simonet
 # [#26490] Untranslated Strings DELETE="Delete" Media Manager > Details View in iframe
 # [#26470] No translation in title column of module manager (lib change)
 # [#26483] Syndication RSS Feeds (module) not working in Joomla! 1.7.0 Stable
 # [#26446] Loadposition does not load more then one module. Thanks Elin.

22-Jul-2011 Jean-Marie Simonet
 $ Updating installation ini files: pl-PL, ta-IN, it-IT

20-Jul-2011 Jean-Marie Simonet
 # Removing install check
 # [#26443] PHP version check at installation says Joomla 1.6
 # [#26432] Banners Manager - trash icon visible when no trashed banners. Thanks Bill.
 # [#26433] banner manager- clients - empty trash icon. Thanks Bill.
 #  [#26396] Fix some mistyped and @package names in the CMS. Thanks Rune.

-------------------- 1.7.0 Stable Release [19-Jul-2011] ------------------

18-Jul-2011 Mark Dexter
 # Needed file was being deleted during update
 # Updated installation language file: sk-SK

17-Jul-2011 Mark Dexter
 # Fix banner issue in sample data (Elin Waring)

17-Jul-2011 Jean-Marie Simonet
 # Updating admin en-GB.xml
 - Deleting plg_authentication_example.ini and sys.ini files

16-Jul-2011 Mark Dexter
 ^ Update sample data for 1.7 (Elin Waring)