@@ -13,7 +13,7 @@ COM_MODULES_CHANGE_POSITION_BUTTON="Select position"
 COM_MODULES_CHANGE_POSITION_TITLE="Change position"
 COM_MODULES_CONFIGURATION="Module Manager Options"
 COM_MODULES_CUSTOM_OUTPUT="Custom output"
-COM_MODULES_ERR_XML="Module XML data non available"
+COM_MODULES_ERR_XML="Module XML data not available"
 COM_MODULES_ERROR_CANNOT_FIND_MODULE="Cannot find module"
 COM_MODULES_ERROR_CANNOT_GET_MODULE="Cannot get module"
 COM_MODULES_ERROR_INVALID_EXTENSION="Invalid module"
